--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,33 @@
         <servlet-name>Servlet</servlet-name>
         <servlet-class>IR11.Lab2.Servlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Servlet1</servlet-name>
+        <servlet-class>IR11.Exam.Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ServletForSearching</servlet-name>
+        <servlet-class>IR11.Exam.ServletForSearching</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SortServlet</servlet-name>
+        <servlet-class>IR11.Exam.SortServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Servlet</servlet-name>
         <url-pattern>/lab2</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servlet1</servlet-name>
+        <url-pattern>/formula</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletForSearching</servlet-name>
+        <url-pattern>/searching</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SortServlet</servlet-name>
+        <url-pattern>/sortMode</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
